@@ -152,8 +152,9 @@ final class Experimental_Abtest {
 	 */
 	protected function request_variation( $test_name ) {
 		$args = [
-			'experiment_name' => $test_name,
-			'anon_id'         => $this->anon_id,
+			'experiment_name'  => $test_name,
+			'anon_id'          => $this->anon_id,
+			'woo_country_code' => get_option( 'woocommerce_default_country' ),
 		];
 
 		$url = add_query_arg(
