@@ -7,6 +7,7 @@
 * Fix - Show the estimated deposit date in the transactions CSV export rather than the deposit ID.
 * Fix - Keep track of customer id in non logged in users.
 * Add - Order status validation for payments/orders/{order_id}/create_customer API.
+* Add - Add country code paramater to ExPlat API requests.
 
 = 2.8.4 - 2021-08-17 =
 * Fix - Fix database connection error on account cache clear.
